[flake8]
exclude = .tox,*.egg

[metadata]
name = mssantelisteblanche
version = 1.0.1
description = Recuperation de la liste blanche MSSante
author = Laurent COUSTET
author_email = laurent.coustet@clarisys.fr
url = https://gitlab.clarisys.fr/common/mssantelisteblanche
requires-python = >=2.7,>=3.5

[options]
packages = find:
install_requires =
	requests
	lxml

[wheel]
universal = 1

